# neutrino

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/neutrino/: config.py  main.py  models.py
backend/src/neutrino/embedding/: cache.py  engine.py
backend/src/neutrino/loki/: client.py  logql.py
backend/src/neutrino/routes/: health.py  search.py
backend/src/neutrino/search/: preprocessor.py  ranking.py
backend/tests/: test_logql.py  test_preprocessor.py  test_ranking.py  test_search_api.py  test_semantic_search.py
deploy/: docker-compose.yml
deploy/grafana/: grafana.ini
deploy/grafana/provisioning/plugins/: neutrino.yaml
deploy/helm/neutrino/: Chart.yaml  values.yaml
deploy/helm/neutrino/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
deploy/loki/: loki-config.yaml
deploy/promtail/: promtail-config.yaml
plugin/: Magefile.go  go.mod  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
plugin/pkg/: main.go
plugin/pkg/plugin/: app.go  proxy.go
plugin/src/: api.ts  constants.ts  module.tsx  plugin.json  types.ts
plugin/src/components/: NeutrinoDrawer.tsx  QueryInput.tsx  ResultsList.tsx  ServiceSelector.tsx  SeverityFilter.tsx
plugin/src/utils/: logql.ts
